# projectY

./: .gitignore  .gitignore.swp  CMakeLists.txt  Readme.md  todos.txt
projectY/: CMakeLists.txt  WinMain.cpp
projectY/containers/: CMakeLists.txt  signal.h  signal.hpp  slot.h  slot.hpp  typelist.h
projectY/graphics/: CMakeLists.txt  camera.cpp  camera.h  color.h  constant_buffer.h  constant_buffer.hpp  draw_mode.h  mesh.cpp  mesh.h  pixel_shader.cpp  pixel_shader.h  renderer.cpp  renderer.h  shader.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer.hpp  vertex_shader.cpp  vertex_shader.h
projectY/gui/: CMakeLists.txt  button.cpp  button.h  gui_element.cpp  gui_element.h  keyboard.cpp  keyboard.h  menu.cpp  menu.h  mouse.cpp  mouse.h  window.cpp  window.h
projectY/math/: CMakeLists.txt  namespace.h  vec3.h
projectY/res/shaders/: pixel.hlsl  solid_pixel.hlsl  solid_vertex.hlsl  vertex.hlsl
projectY/util/: CMakeLists.txt  id_generator.h  non_owning_ptr.h  uuid.cpp  uuid.h  ywin.h
projectY/yml/: CMakeLists.txt  lexer.h  namespace.h  token.h
wui/containers/: CMakeLists.txt  signal.h  signal.hpp  slot.hpp  typelist.h
wui/graphics/: camera.cpp  mesh.cpp  mesh.h  renderer.h  vertex_buffer.hpp  vertex_shader.h
wui/gui/: CMakeLists.txt  button.cpp  button.h  gui_element.h  keyboard.h  menu.cpp  menu.h  mouse.h  namespace.h  parent_window.cpp  parent_window.h  window.cpp  window.h
wui/math/: CMakeLists.txt  rectangle.cpp  rectangle.h  vec3.h
wui/res/shaders/: solid_vertex.hlsl
wui/util/: CMakeLists.txt  error_printer.h  id_generator.h  pointer.h  type_id.h  type_traits.h  ywin.h
